updated description version number for release

--- a/addons/picky-pixels/plugin.cfg
+++ b/addons/picky-pixels/plugin.cfg
@@ -1,7 +1,7 @@
 [plugin]
 
 name="PickyPixels"
-description=""
+description="Pixel-perfect control over colors and lighting"
 author="auranym"
-version=""
+version="0.1.0"
 script="picky_pixels.gd"
